RESOLVED FIXED276236
[view-transitions] Check tree scopes against names instead of elements
https://bugs.webkit.org/show_bug.cgi?id=276236
Summary [view-transitions] Check tree scopes against names instead of elements
Tim Nguyen (:ntim)
Reported 2024-07-04 16:45:10 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-04 16:46:13 PDT
Tim Nguyen (:ntim)
Comment 2 2024-07-04 16:47:40 PDT
EWS
Comment 3 2024-07-05 14:35:40 PDT
Committed 280701@main (ba0892d76540): <https://commits.webkit.org/280701@main> Reviewed commits have been landed. Closing PR #30501 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.