[view-transitions] Check tree scopes against names instead of elements https://bugs.webkit.org/show_bug.cgi?id=276236 rdar://131139528

Reviewed by Matt Woodrow.

Follow https://github.com/w3c/csswg-drafts/pull/10528

* LayoutTests/TestExpectations:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::effectiveViewTransitionName):
(WebCore::ViewTransition::captureOldState):
(WebCore::ViewTransition::captureNewState):
(WebCore::ViewTransition::documentElementIsCaptured const):

Canonical link: https://commits.webkit.org/280701@main